# zarc

./: .gitignore  CHANGELOG.md  CITATION.cff  COPYRIGHT  Cargo.toml  Cargo.toml.zst  README.md  SPEC.md  zarc.magic
.github/: dependabot.yml
.github/workflows/: ci.yml  release-plz.yml  release.yml
crates/cli/: Cargo.toml  build.rs  manifest.rc  super.exe.manifest
crates/cli/src/: args.rs  debug.rs  main.rs  pack.rs
crates/lib/: Cargo.toml
crates/lib/src/: decode.rs  encode.rs  format.rs  lib.rs  metadata.rs  zstd.rs
crates/lib/src/zstd/: parser.rs
crates/ozarc/: CHANGELOG.md  Cargo.toml
crates/ozarc/src/: framing.rs  lib.rs
crates/puredec/: Cargo.toml
crates/puredec/src/: main.rs
crates/zarc/: CHANGELOG.md  Cargo.toml
crates/zarc-cli/: CHANGELOG.md  Cargo.toml  build.rs  zarc.exe.manifest
crates/zarc-cli/src/: args.rs  debug.rs  list_files.rs  logs.rs  main.rs  pack.rs  unpack.rs
crates/zarc-cli/wix/: main.wxs
crates/zarc/src/: constants.rs  decode.rs  directory.rs  encode.rs  format.rs  header.rs  integrity.rs  lib.rs  metadata.rs  ondemand.rs  owner_cache.rs  trailer.rs
crates/zarc/src/decode/: directory.rs  error.rs  frame_iterator.rs  open.rs  prepare.rs  zstd_iterator.rs
crates/zarc/src/directory/: edition.rs  elements.rs  file.rs  frame.rs  legacy.rs  posix_owner.rs  specials.rs  strings.rs  timestamps.rs
crates/zarc/src/encode/: add_file.rs  content_frame.rs  directory.rs  lowlevel_frames.rs
crates/zarc/src/format/: constants.rs  directory.rs  header.rs  integrity.rs  specials.rs  timestamps.rs  trailer.rs
crates/zarc/src/metadata/: decode.rs  encode.rs
