[workspace]
resolver = "2"
members = [
	"crates/ozarc",
	"crates/zarc",
	"crates/zarc-cli",
]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.8.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Where to host releases
hosting = ["axodotdev"]
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.zstd"

[workspace.metadata.dist.dependencies.apt]
libext2fs-dev = '*'

[profile.release]
lto = true
debug = 1 # for stack traces
codegen-units = 1

[profile.dev.build-override]
opt-level = 0
codegen-units = 1024
debug = false
debug-assertions = false
overflow-checks = false
incremental = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
strip = "symbols"

[profile.release.build-override]
opt-level = 0
codegen-units = 1024
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
