[package]
name = "zarc"
version = "0.1.0"
edition = "2021"

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache-2.0 OR MIT"
description = "Archive format based on Zstd"
keywords = ["archive", "file-format", "zstd", "zarc"]
categories = ["encoding", "compression"]

documentation = "https://github.com/passcod/zarc"
repository = "https://github.com/passcod/zarc"
readme = "README.md"

[dependencies]
blake3 = "1.5.0"
deku = { version = "0.16.0", features = ["logging"], git = "https://github.com/sharksforarms/deku" }
ed25519-dalek = { version = "2.1.0", features = ["batch"] }
log = "0.4.20"
minicbor = { version = "0.20.0", features = ["derive", "std"] }
rand_core = "0.6.4"
tracing = "0.1.40"
zstd = "0.13.0"
zstd-safe = { version = "7.0.0", features = ["std"] }
