[package]
name = "puredec"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive", "cargo", "wrap_help"] }
ruzstd = "0.5.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
