[package]
name = "zarc-cli"
version = "0.0.1"
edition = "2021"

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache-2.0 OR MIT"
description = "Archive format based on Zstd: CLI tool"
keywords = ["archive", "file-format", "zstd", "zarc"]
categories = ["command-line-utilities"]

documentation = "https://github.com/passcod/zarc"
repository = "https://github.com/passcod/zarc"
readme = "README.md"

[[bin]]
name = "zarc"
path = "src/main.rs"

[dependencies]
blake3 = { version = "1.5.0", features = ["rayon"] }
bs64 = "0.1.2"
chrono = "0.4.31"
clap = { version = "4.4.18", features = ["derive", "cargo", "wrap_help", "string"] }
deku = { version = "0.16.0", features = ["logging"], git = "https://github.com/sharksforarms/deku" }
miette = { version = "5.10.0", features = ["fancy"] }
minicbor = { version = "0.20.0", features = ["std"] }
ozarc = { version = "0.0.1", path = "../ozarc" }
regex = "1.10.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
umask = "2.1.0"
walkdir = "2.4.0"
zarc = { version = "0.0.1", path = "../zarc" }
zstd-safe = { version = "7.0.0", features = ["experimental"] }

[build-dependencies]
bosion = "1.0.2"
embed-resource = "2.4.0"
