[package]
name = "zarc"
version = "0.0.0"
edition = "2021"

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache-2.0 OR MIT"
description = "Archive format based on Zstd"
keywords = ["archive", "file-format", "zstd", "zarc"]
categories = ["encoding", "compression"]

documentation = "https://github.com/passcod/zarc"
repository = "https://github.com/passcod/zarc"

[dependencies]
blake3 = "1.5.0"
chrono = "0.4.33"
deku = { version = "0.16.0", features = ["logging"], git = "https://github.com/sharksforarms/deku" }
log = "0.4.20"
miette = "5.10.0"
minicbor = { version = "0.20.0", features = ["derive", "std"] }
ozarc = { version = "0.0.0", path = "../ozarc" }
subtle = "2.5.0"
thiserror = "1.0.56"
tracing = "0.1.40"
visibility = "0.1.0"
zstd = "0.13.0"
zstd-safe = { version = "7.0.0", features = ["std"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27.1", features = ["user"] }
xattr = { version = "1.2.0", optional = true }

[target.'cfg(target_os="linux")'.dependencies]
e2p-fileflags = { version = "0.1.0", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52.0", features = ["Win32_Storage_FileSystem"], optional = true }

[features]
default = ["metadata"]

## Enable the metadata gathering module, which pulls in platform-specific libraries
metadata = ["dep:e2p-fileflags", "nix/fs", "dep:windows", "dep:xattr"]

## Expose internal encoding/decoding functions
expose-internals = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

